Rename folder and move files

--- a/fomulario.html
+++ b/fomulario.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <title>Formulario Aprendizaje de Desarrollo</title>
 </head>
-
+<!--Inicio de body -->
 <body>
     <div id="main-content">
         <header class="content-head">
